# django_storefront

./: Makefile  docker-compose.yml  pyproject.toml
playground/: urls.py  views.py
playground/templates/: hello.html
provision/docker/storefront/: Dockerfile
provision/docker/storefront/scripts/: store_customer.sql
store/: models.py
store/migrations/: 0001_initial.py
storefront/: settings.py  urls.py
tags/: models.py
