[tool.poetry]
name = "storefront"
version = "0.1.0"
description = ""
authors = ["Travis Aucoin <travisdevaucoin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
pylint = "^2.15.6"
pylint-django = "^2.5.3"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
